--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,7 +1,6 @@
 name: Latest blog post workflow
-on: 
-    schedule:
-        - cron: '0 * * * *'
+on: [issues]
+    
 jobs: 
     update-readme-with-blog: 
         name: Update this repo's README with latest blog posts
