--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,7 +1,7 @@
 name: Latest blog post workflow
 on: 
     schedule: 
-     - cron: 0 */8 * * *
+     - cron: 0 1 * * *
     
 jobs: 
     update-readme-with-blog: 
