--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,16 +1,17 @@
-name: RSS Feed Cron Job
+name: Latest blog post workflow
+on: 
 
-on:
-  schedule:
-    - cron: '0 9 * * *'
 
-jobs:
-  rss-feed-cron-job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Install dependencies
-        run: npm install
-      - name: Run RSS feed cron job
-        run: node rss-feed-cron-job.js
+    schedule: 
+     - cron: 0 0 * * 1,3,5
+    
+jobs: 
+    update-readme-with-blog: 
+        name: Update this repo's README with latest blog posts
+        runs-on: ubuntu-latest
+        steps: 
+            - uses: actions/checkout@v2
+            - uses: gautamkrishnar/blog-post-workflow@master
+              with: 
+                max_post_count: "10"
+                feed_list: "https://dev.hrishi.ml/rss.xml"
